complete revision of the code, changed the skeleton